<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.RegisterActivity">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="214dp"
            android:layout_height="58dp"
            android:layout_marginTop="73dp"
            android:contentDescription="@string/sneakidro"
            android:maxWidth="214dp"
            android:maxHeight="58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blue_sneakidro" />

        <ImageView
            android:id="@+id/cloud_register"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_marginStart="-22dp"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/cloud"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clouds" />

        <ImageView
            android:id="@+id/cloud_register2"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_marginTop="592dp"
            android:layout_marginEnd="-22dp"
            android:contentDescription="@string/cloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clouds" />

        <TextView
            android:id="@+id/namaLengkap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/poppins_reguler"
            android:text="@string/nama_lengkap"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/nama_input"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/nama_input"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/poppins_reguler"
            android:hint="@string/nama_hint"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namaLengkap"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/nomorHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_reguler"
            android:text="@string/nomorHp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/namaLengkap"
            app:layout_constraintTop_toBottomOf="@+id/nama_input" />

        <EditText
            android:id="@+id/nomor_input"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/poppins_reguler"
            android:hint="@string/nomorhp_hint"
            android:inputType="number"
            android:maxLength="12"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomorHp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_reguler"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/nomorHp"
            app:layout_constraintTop_toBottomOf="@+id/nomor_input" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/poppins_reguler"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_reguler"
            android:text="@string/password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="242dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_input"
                android:fontFamily="@font/poppins_reguler"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="38dp"
            android:width="242dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/sudah_punya_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_reguler"
            android:text="@string/sudah_punya_akun_login"
            android:background="@color/semi_gray"
            android:textColor="@color/blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>