<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/pesan_layout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/shadow">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    tools:context=".activities.PesanDCActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_28"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:contentDescription="@string/back_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/dc"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_kategori"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGrup1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:checkedButton="@+id/deepClean"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/deepClean"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_reguler"
                    android:text="@string/deep_clean"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/deskripsiBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/desc_barang"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/card_deskripsi_barang"
        app:layout_constraintStart_toStartOf="@+id/card_kategori"
        app:layout_constraintTop_toBottomOf="@+id/card_kategori"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_deskripsi_barang"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="64dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_kategori">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jenis_sepatu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_reguler"
                android:hint="@string/jenis_sepatu"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jumlah_sepatu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="2"
                android:fontFamily="@font/poppins_reguler"
                android:hint="@string/jumlah_sepatu"
                android:inputType="number"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/catatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins_reguler"
                android:hint="@string/catatan"
                android:inputType="textPersonName"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/metode_pembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/metode_dc"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/card_bayar"
        app:layout_constraintStart_toStartOf="@+id/card_deskripsi_barang"
        app:layout_constraintTop_toBottomOf="@+id/card_deskripsi_barang"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_bayar"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_deskripsi_barang"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGrup2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/cashOnDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/poppins_reguler"
                    android:text="@string/cod"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/virtualAccountBca"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_reguler"
                    android:text="@string/bca"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/pesanBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="30dp"
        android:text="@string/psn"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/card_bayar"
        app:layout_constraintStart_toStartOf="@+id/card_bayar"
        app:layout_constraintTop_toBottomOf="@+id/card_bayar" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>