<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="725dp"
    android:layout_marginBottom="80dp"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/riwayatPemesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/riwayat_pemesanan"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riwayatPemesanan"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="245dp"
            android:layout_height="224dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:src="@drawable/user_pemesan"
            app:layout_constraintBottom_toTopOf="@+id/tidakAdaPesanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/ill_desc" />

        <TextView
            android:id="@+id/tidakAdaPesanan"
            android:layout_width="247dp"
            android:layout_height="51dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/poppins_reguler"
            android:gravity="center"
            android:text="@string/pesanan"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riwayatPemesanan" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riwayatPemesanan" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>